# spherical_basis_QNM

./: .gitignore  README.md  Solver_1p.py  basis_set.py  compile.sh  field.py  green_function.py  material.py  mathfunctions.pyx  particle.py  plot_functions.py  pyproject.toml  qnm_basis.py  rayleigh_iteration.py  requirements.txt  separation_matrix.py  setup.cfg  setup.py  spherical_wave_function.py
C_MathFunctions/: algebra.cpp  mathfunctions.h  prime.hpp
Tests/: test_material.py  test_mathfunctions.py  test_particle.py  test_rayleigh_iteration.py  test_separation_matrix.py  test_sph_wf.py
examples/: Solver_1p.py  plot_various_functions.py
src/: setup.py
src/spherical_basis_QNM/basis_set/: basis_set.py  spherical_wave_function.py
src/spherical_basis_QNM/field/: field.py
src/spherical_basis_QNM/green_function/: green_function.py
src/spherical_basis_QNM/material/: material.py
src/spherical_basis_QNM/mathfunctions/: mathfunctions.pyx  setup_mathfunction.py
src/spherical_basis_QNM/mathfunctions/C_MathFunctions/: angular_int_aux.cpp  mathfunctions.h  spherical_harmonics.cpp
src/spherical_basis_QNM/particle/: particle.py
src/spherical_basis_QNM/plot_functions/: plot_functions.py
src/spherical_basis_QNM/qnm_basis/: qnm_basis.py
src/spherical_basis_QNM/rayleigh_iteration/: rayleigh_iteration.py
src/spherical_basis_QNM/separation_matrix/: separation_matrix.py
tests/: test_material.py  test_mathfunctions.py  test_particle.py  test_rayleigh_iteration.py  test_separation_matrix.py  test_sph_wf.py
