[metadata]
name = spherical_basis_QNM
version = 0.0.1
author = Stephan van den Wildenberg
author_email = svandenwildenberg@ucsd.edu
description = This is a package containing an implementation of the quasi-normal mode computation for spherical nano-particles with a spherical wave basis set
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fano4/spherical_basis_QNM
project_urls =
    Bug Tracker = https://github.com/Fano4/spherical_basis_QNM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
